completed fullPostInterface except vote button and the insert my answer feature to be implemented after user log-in feature testing